# JOB-20260701230408-000127

./: .coding_prompt.txt  .env.example  .gitignore  BUILD_OUTCOME.md  CLAUDE.md  OUT_OF_SCOPE.md  README.md  ROADMAP.md  SPEC.md  docker-compose.yml  job.json  pyproject.toml  requirements.txt  script.sh
.planning/: .phase_status.json  CONTEXT.md  RESEARCH.md
.planning/phases/1-project-overview/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/2-technical-stack/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/3-architecture/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/4-data-model/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/5-project-structure/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/6-out-of-scope/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/7-ui/ux/: PLAN-01.md
app/: __init__.py  main.py  settings.py
app/api/: __init__.py  agents.py  review.py  runs.py  tasks.py
app/db/: __init__.py
app/db/migrations/: 001_initial.sql  __init__.py
app/models/: __init__.py  agent.py  base.py  document.py  enums.py  review.py  run.py  task.py
app/observability/: __init__.py  eval.py  logging.py  tracing.py
app/orchestrator/: __init__.py  agent.py  decision_boundary.py  langgraph_flow.py  queue.py  review.py
app/rag/: __init__.py  embeddings.py  memory.py  retriever.py
app/ui/: __init__.py  admin.py
app/ui/static/: admin.css
app/ui/templates/: agents.html  base.html  dashboard.html  review.html  runs.html  tasks.html
docs/: PROJECT_OVERVIEW.md
scripts/: __init__.py  verify_stack.py
src/ai_platform/: config.py
src/ai_platform/rag/: retriever.py
tests/: __init__.py  test_api.py  test_orchestrator.py  test_out_of_scope_doc.py  test_project_structure.py  test_stack_imports.py  test_ui.py
