[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-platform"
version = "0.2.0"
description = "Enterprise multi-agent AI orchestration platform (LangGraph + pgvector + FastAPI)"
requires-python = ">=3.11"
authors = [
    { name = "AI Systems Engineering" },
]
readme = "README.md"
license = { text = "Proprietary" }

# ---------------------------------------------------------------------------
# Dependencies
#
# Organised by concern, but PEP 621 requires a single list, so the
# grouping is preserved with comments above each block.
# ---------------------------------------------------------------------------
dependencies = [
    # -- Core orchestration: LangGraph (graph-native state, cycles, checkpointing)
    "langgraph>=0.2.50,<0.3",
    "langgraph-checkpoint>=2.0,<3.0",
    "langgraph-checkpoint-postgres>=2.0,<3.0",

    # -- LangChain core + community providers (kept thin in prod code paths)
    "langchain-core>=0.3.0,<0.4",
    "langchain>=0.3.0,<0.4",
    "langchain-community>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "langchain-anthropic>=0.2.0,<0.3",
    "langchain-postgres>=0.0.12,<0.1",

    # -- Raw provider SDKs: the production pattern (Pydantic-validated tool calls)
    "openai>=1.50.0,<2.0",
    "anthropic>=0.36.0,<1.0",

    # -- MCP (Model Context Protocol) for inter-agent tool protocol
    "mcp>=1.0.0,<2.0",

    # -- Persistence: PostgreSQL + pgvector (unified structured + vector store)
    "sqlalchemy>=2.0.30,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "psycopg[binary,pool]>=3.2.0,<4.0",
    "alembic>=1.13.0,<2.0",
    "pgvector>=0.3.6,<0.4",

    # -- API layer: FastAPI + Pydantic v2 + async stack
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",
    "httpx>=0.27.0,<1.0",
    "redis>=5.0.0,<6.0",

    # -- Observability, evaluation, structured logging
    "loguru>=0.7.0,<1.0",
    "langfuse>=2.45.0,<3.0",
    "opentelemetry-api>=1.27.0,<2.0",
    "opentelemetry-sdk>=1.27.0,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0",
    "prometheus-client>=0.21.0,<1.0",

    # -- Auth / governance
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",

    # -- Environment loading + retry helpers
    "python-dotenv>=1.0.0,<2.0",
    "tenacity>=8.2.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<10.0",
    "pytest-asyncio>=0.24.0,<2.0",
    "pytest-cov>=5.0.0,<7.0",
    "ruff>=0.7.0,<1.0",
    "mypy>=1.13.0,<2.0",
]

[project.urls]
Documentation = "https://docs.example.internal/agentic-ai-platform"
Source = "https://github.com/9KMan/JOB-20260701230408-000127"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = [
    "S101",  # asserts are allowed in tests
    "S104",  # hardcoded bind addresses allowed (0.0.0.0 dev server)
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
